--- a/views/index.html
+++ b/views/index.html
@@ -85,7 +85,7 @@
 					<div class="mdixtk-font mdixtk-sub-slogan">The quickest, easiest way to bring Material Design to your desktop WPF applications.</div>
 					<div class="mdixtk-font mdixtk-sub-slogan">
 						<p class="mdl-typography--font-light">
-							An open source library to providing the Material Design palette, plenty of control themes, and new custom controls to bring this popular design language to your dekstop applications.
+							An open source library to providing the Material Design palette, plenty of control themes, and new custom controls to bring this popular design language to your desktop applications.
 						</p>
 						<p class="mdl-typography--font-light">
 							Take a look around at some screen shots, then follow the easy Get Started guide to give your app a makeover.
