--- a/views/index.html
+++ b/views/index.html
@@ -89,11 +89,28 @@
 							An open source library to providing the Material Design palette, plenty of control themes, and new custom controls to bring this popular design language to your desktop applications.
 						</p>
 						<p class="mdl-typography--font-light">
-							Take a look around at some screen shots, then follow the easy Get Started guide to give your app a makeover.
+							Take a look around at the video and screen shots, then follow the easy Get Started guide to give your app a makeover.
 						</p>
 					</div>					
 				</div>					
 				
+				<div class="mdixtk-proposition-section">
+					<div class="mdixtk-proposition-band">
+						<div class="mdixtk-proposition-band-text">
+							<iframe width="420" height="315" src="https://www.youtube.com/embed/Q8s3pnPP4oo" frameborder="0" allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>
+				
+				<div class="mdixtk-proposition-section">
+					<div class="mdixtk-proposition-band">
+						<div class="mdixtk-proposition-band-text">
+							<p class="mdl-typography--headline mdl-typography--font-thin">
+								Included are themes for (almost) all standard .Net Framework controls, plus some added extras including the easy to use Card, TimePicker and ColorZone controls.
+							</p>
+						</div>						
+					</div>					
+				</div>
 				
 				<div class="mdixtk-screen-section mdl-typography--text-center">
 					<a name="screens"></a>				
@@ -128,6 +145,7 @@
 						</div>
 					</div>
 				</div>
+				
 				<div class="mdixtk-customized-section">		
 					<a name="getStarted"></a>
 					<div class="mdixtk-font mdixtk-slogan">Get Started</div>
