--- a/views/index.html
+++ b/views/index.html
@@ -167,7 +167,7 @@
 							demo project contains a palette selector, but to get started, just copy the XAML from the test application into your app.xaml.																
 						</p>
 						<p>
-							You can copy the <a href="https://raw.githubusercontent.com/ButchersBoy/MaterialDesignInXamlToolkit/master/MaterialDesignColors.WpfExample/App.xaml" target="_blank">app.xaml content from here</a>.
+							You can copy the <a href="https://raw.githubusercontent.com/ButchersBoy/MaterialDesignInXamlToolkit/master/MainDemo.Wpf/App.xaml" target="_blank">app.xaml content from here</a>.
 						</p>
 						<p>
 							Now, in your <code>MainWindow.xaml</code> add a few attributes to the root to configure the the colours and Roboto font: 
