update media tag

--- a/views/doobry.html
+++ b/views/doobry.html
@@ -9,7 +9,7 @@
 <meta itemprop="name" content="doobry">
 <meta itemprop="description" content="doobry, the NoSQL Editor for DocumentDb">
 <meta itemprop="image" content="http://materialdesigninxaml.net/images/doobry-512-onwhite.png">
-<meta name="twitter:card" content="doobry, the NoSQL Editor for DocumentDb">
+<meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@james_willock">
 <meta name="twitter:title" content="doobry">
 <meta name="twitter:description" content="doobry, the NoSQL Editor for DocumentDb">
