--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,44 +58,30 @@ function findSetupAsset(assets) {
     <div class="mdl-layout--large-screen-only mdl-layout__header-row">
     </div>
     <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-      <h3><%= partialId %></h3>
+      <h3>Material Design In XAML</h3>
     </div>
     <div class="mdl-layout--large-screen-only mdl-layout__header-row">    
     </div>
-    <%- tabMarkup %>
-    <!--
-    <div class="mdl-layout__tab-bar mdl-js-ripple-effect">    
-      <div class="mdl-tabs__tab-bar">
-        <a href="#home" class="mdl-layout__tab">Material Design In XAML</a>
-        <a href="#showcase" class="mdl-layout__tab">Showcase</a>
-        <a href="#F1ix" class="mdl-layout__tab">F1ix</a>
-        <a href="#doobry" class="mdl-layout__tab is-active">doobry</a>
-      </div>
-    </div>
-    -->
+    <%- tabBarMarkup %>
   </header>
 
   <main class="mdl-layout__content">
-    <div class="mdl-layout__tab-panel" id="home">
-      home
-    </div>                    
-    <div class="mdl-layout__tab-panel" id="showcase">
-      showcase
-    </div>
-    <div class="mdl-layout__tab-panel" id="F1ix">        
-      <div class="mdl-grid standard-max-width">
-        F1ix
-      </div>
-    </div>
-
-    
-
-    <div class="mdl-layout__tab-panel is-active" id="doobry">
-        <%- include(partialSource); %>
-    </div>
+    <% for(var i=0; i<tabContentOptions.length; i++) { %>
+        <div class="<%= 'mdl-layout__tab-panel' + (tabContentOptions[i].id == activeTabId ? ' is-active' : '') %>" id="<%= tabContentOptions[i].id %>">
+            <% if (tabContentOptions[i].id == activeTabId) { %>
+                <%- include(tabContentOptions[i].partialSource); %>
+            <% } else { %>
+                <%- tabContentOptions[i].delaySource %>
+            <% } %>            
+        </div>    
+    <% } %>          
 
 
-    </div>    
+
+
+
+
+       
     <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>    
 		<script>
@@ -108,8 +94,6 @@ function findSetupAsset(assets) {
       ga('send', 'pageview');
     
     </script>
-  	
-	
-	
+  </main>			
 </body>
 </html>
