OK, about to 'appify' the client side a bit more

--- a/views/partials/f1ix.html
+++ b/views/partials/f1ix.html
@@ -1,1 +1,31 @@
-<div> this is the F1ix partial!!!!</div>
+<div class="mdl-grid standard-max-width">      
+    <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">          
+        <div class="mdl-grid standard-copy">            
+            <div class="mdl-cell mdl-cell--12-col">              
+                <img src="/images/f1ix-150x150.png" alt="F1ix">              
+            </div>
+            <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">F1<i>ix</i> - Formula app 1 for Windows</h3>
+            <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
+                <p>
+                    F1<i>ix</i> is a free Formula 1 results and stats app for Windows
+                </p>
+                <p>
+                    Works on Windows 7, 8 and 10, just download the installer, install once and the application will automatically keep itself updated.
+                </p>
+                <p>
+                    Provides results, standings, calendar, fastest laps etc.
+                </p>
+                <a class="setup-download">Download Installer</a>
+            </div>            
+            <div class="mdl-cell mdl-cell--6-col">
+                <a href="/images/f1ix-ss-1.png">
+                    <img class="article-image" src="/images/f1ix-ss-1.png" border="0" alt="TODO">
+                </a>
+            </div>
+            <div class="mdl-cell mdl-cell--12-col mdl-card__supporting-text no-padding">
+                <a class="github-button" href="https://github.com/MaterialDesignInXaml/F1inXAML" data-icon="octicon-star" data-style="mega" data-count-href="/ButchersBoy/doobry/stargazers" data-count-api="/repos/MaterialDesignInXaml/F1inXAML#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star MaterialDesignInXaml/F1inXAML on GitHub">Star
+                </a>              
+            </div>
+        </div>
+    </div>
+</div>
