--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,6 +94,12 @@ function findSetupAsset(assets) {
       ga('send', 'pageview');
     
     </script>
+    <script>        
+        $(".mdl-layout__tab").click(function(sender) {
+            console.log("clicked" + sender);
+        });
+
+    </script>
   </main>			
 </body>
 </html>
