--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,12 +94,7 @@ function findSetupAsset(assets) {
       ga('send', 'pageview');
     
     </script>
-    <script>        
-        $(".mdl-layout__tab").click(function(sender) {
-            console.log("clicked" + sender);
-        });
-
-    </script>
+    <script src="/js/clientbundle.js"></script>    
   </main>			
 </body>
 </html>
