--- a/views/partials/f1ix.html
+++ b/views/partials/f1ix.html
@@ -15,13 +15,25 @@
                 <p>
                     Provides results, standings, calendar, fastest laps etc.
                 </p>
-                <a class="setup-download">Download Installer</a>
+                <a class="setup-download-f1ix">Download Installer</a>
             </div>            
             <div class="mdl-cell mdl-cell--6-col">
                 <a href="/images/f1ix-ss-1.png">
                     <img class="article-image" src="/images/f1ix-ss-1.png" border="0" alt="TODO">
                 </a>
             </div>
+
+<div class="mdl-cell mdl-cell--6-col">
+                <a href="/images/f1ix-ss-2.png">
+                    <img class="article-image" src="/images/f1ix-ss-2.png" border="0" alt="TODO">
+                </a>
+            </div>
+            <div class="mdl-cell mdl-cell--6-col">
+                <a href="/images/f1ix-ss-3.png">
+                    <img class="article-image" src="/images/f1ix-ss-3.png" border="0" alt="TODO">
+                </a>
+            </div>
+
             <div class="mdl-cell mdl-cell--12-col mdl-card__supporting-text no-padding">
                 <a class="github-button" href="https://github.com/MaterialDesignInXaml/F1inXAML" data-icon="octicon-star" data-style="mega" data-count-href="/ButchersBoy/doobry/stargazers" data-count-api="/repos/MaterialDesignInXaml/F1inXAML#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star MaterialDesignInXaml/F1inXAML on GitHub">Star
                 </a>              
